Fix control hiding part of the description on mobiles

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -396,6 +396,7 @@ a {
     justify-content: flex-end;
     margin-bottom: 0.5rem;
     position: relative;
+    top: initial;
   }
 }
 
